@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype orto

skinparam classAttributeIconSize 0

class RegisterUserUI {
}

class UserService {
    + toUserDTO(user)
    + toUserEntity(userDTO)
    + createUser(user)
}



class RegisterUserController {
    + RegisterUserController(userRepository)
    + registerUser(name, email, phoneNumber, username, password)
}

class User {
    - String id
    - String name
    - String email
    - String phoneNumber
    - String password
    - String username

    + User(name, email, phoneNumber,username, password)
}

class UserDTO {
    - String id
    - String name
    - String email
    - String phoneNumber
    - String password
    - String username

    + UserDTO(name, email, phoneNumber,username, password)
}

class UserRepository {
    + createUser(name, email, phoneNumber,username, password)
}


RegisterUserUI .> RegisterUserController

RegisterUserController .> UserService

UserService ..> UserRepository : userRepository

UserRepository "1" --> "*" User : user
RegisterUserController "1" ---> "*" UserDTO: use
UserService "1" --> "*" UserDTO: use

@enduml
